takamaka_examples/src/takamaka/tests/errors/inconsistententry1/Sub.java
package takamaka.tests.errors.inconsistententry1;

import takamaka.lang.Entry;

public class Sub extends Super {
	public @Entry void m() {}
}